--- a/todo/templates/base.html
+++ b/todo/templates/base.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
-    <h1>ToDo for fs12</h1>
+    <h1>ToDo List for MK</h1>
     {% if messages %}
         {% for message in messages %}
             {% if message.tags == "error" %}
