update todo added

--- a/todo/templates/add.html
+++ b/todo/templates/add.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-<h1>ToDo List Add</h1>
+<h1> Add Todo List</h1>
 {% block container %}
    <form action="" method="POST">
     {% csrf_token %}
