--- a/todo/templates/update.html
+++ b/todo/templates/update.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
 {% block container %}
-    <h1>ToDo List Update</h1>   
+    <h1>Update Todo List</h1>   
    <form action="" method="POST">
     {% csrf_token %}
     <table>{{ form }}</table>
-    <input type="submit" value="Udate Todo"/>
+    <input type="submit" value="Update Todo"/>
 
    </form>
 
